syntax = "proto3";

package com.netifi.quickstart.service;

service HelloService {

    // Returns a Hello World Message
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}
